--- a/index.html
+++ b/index.html
@@ -8,6 +8,21 @@
     <link rel="stylesheet" href="style.css"></rel>
 </head>
 <body>
+
+    <div class="overlay">
+        <form>
+            <button id="closeOverlay">Cancel</button>
+            <label for="titleInput">Title: </label><input id="titleInput" type="text" required><br>
+            <label for="authorInput">Author: </label><input id="authorInput" type="text" required><br>
+            <label for="pagesInput">Total Pages: </label><input id="pagesInput" type="number"> required<br>
+            <div id="readcheckbox">
+            <label for="readInput">Read: </label><input id="readInput" type="checkbox">
+            </div><br>
+            <button input type="submit" id="submitBook">Add Book</button>
+        </form>
+    </div>
+
+
     <div class="header">
         <h1>The Library</h1>
     </div>
@@ -16,6 +31,7 @@
 
         </div>
         <div class="data">
+            <button id="newBookButton">Add New Book</button>
             <h2>Data</h2>
             <table>
                 <tr>
@@ -42,6 +58,6 @@
 
 
 
-
+<script src="source.js"></script>
 </body>
 </html>
