--- a/index.html
+++ b/index.html
@@ -21,19 +21,23 @@
                 <button id="closeOverlay">X</button>
                 <h2>Add a New Book</h2>
             <form>
+                <!-- Removed the required for ease of adding new books - Add again in a bit -->
                 <label for="titleInput">Title: </label><input id="titleInput" type="text" required><br>
-                <label for="authorInput">Author: </label><input id="authorInput" type="text" required><br>
-                <label for="pagesInput">Total Pages: </label><input id="pagesInput" type="number"required><br>
+                <label for="authorInput">Author: </label><input id="authorInput" type="text" ><br>
+                <label for="pagesInput">Total Pages: </label><input id="pagesInput" type="number"><br>
                 <div id="readcheckbox">
                 <label for="readInput">Read: </label><input id="readInput" type="checkbox">
                 </div><br>
-                <button input type="submit" id="submitBook">Add Book</button>
+                <button type="submit" id="submitBook">Add Book</button>
             </form>
             </div>
         </div>
-        <div class="booksWrapper">
+
+        <!-- Container to hold the new books in the library -->
+        <div class="bookWrapper">
 
         </div>
+
         <div class="data">
             <button id="newBookButton">Add New Book</button>
             <h2>Data</h2>
