started adjusting the DOM for view book

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                     <span class='spanError' id='authorError'></span>
                     <label for="pagesInput">Total Pages: </label><input id="pagesInput" type="number">
                     <span class='spanError' id='pagesError'></span>
+                    <label for='additionalInfoInput'>Additional Information:</label><textarea id="additionalInfoInput"> </textarea>
                     <div id="readcheckbox">
                         <label for="readInput">Read: </label><input id="readInput" type="checkbox">
                     </div><br>
