--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </div>
 
         <div class="data">
-            <h2>Data</h2>
+            <h2>Data:</h2>
             <table>
                 <tr>
                     <th>Total Books</th>
