added real-time data validation

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <button id="closeOverlay">X</button>
                 <h2>Add a New Book</h2>
                 <form>
-                    <label for="titleInput">Title: </label><input id="titleInput" type="text" maxlength="51" required>
+                    <label for="titleInput">Title: </label><input id="titleInput" type="text" maxlength="51" required autofocus>
                     <span class='spanError' id='titleError'></span>
                     <label for="authorInput">Author: </label><input id="authorInput" type="text" maxlength="51" required>
                     <span class='spanError' id='authorError'></span>
